Renamed Teach to QTeach, Fixed form spacing, edit default theme

--- a/src/scss/_theme-default.scss
+++ b/src/scss/_theme-default.scss
@@ -9,11 +9,11 @@ $default-padding: $size-base * 1.5;
 $family-sans-serif: "Nunito", sans-serif;
 
 /* Base color */
-$base-color: #2e323a;
+$base-color: #4a76c7;
 $base-color-light: rgba(24, 28, 33, .06);
 
 /* General overrides */
-$primary: $turquoise;
+$primary:#395297;
 $body-background-color: #f8f8f8;
 $link: $blue;
 $link-visited: $purple;
